--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,8 @@
             </div>    
             <div class="footer-col footer-col-2">
                 <ul class="social-media-list">
-                    <li><a href="{{ site.github }}"><svg viewBox="0 0 16 16" class="svg-icon"><use xlink:href="/assets/minima-social-icons.svg#github"></use></svg><span>github</span></a></li>
+                    <li><a href="{{ site.github }}"><svg class="svg-icon"><use xlink:href="/assets/minima-social-icons.svg#github"></use></svg><span>github</span></a></li>
+                    <li><a href="{{ "/feed.xml" | relative_url }}"><svg class="svg-icon"><use xlink:href="/assets/minima-social-icons.svg#rss"></use></svg><span>rss</span></a></li>                
                 </ul>
             </div>
             <div class="footer-col footer-col-3">
