--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang | default: "pt-BR" }}">
-    {%- include head.html -%}
-    <body>
-        {%- include header.html -%}
-        <main class="page-content" aria-label="Content">
-			<div class="wrapper">
-                {{ content }}
-            </div>
-        </main>
-        {%- include footer.html -%}
-    </body>
+<html lang="{{ site.lang | default: " pt-BR" }}">
+{% include head.html %}
+<body>
+{% include header.html %}
+    <main class="page-content" aria-label="Content">
+        <div class="wrapper">
+            {{ content }}
+        </div>
+    </main>
+{% include footer.html %}
+</body>
 </html>
