--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,47 +3,45 @@ layout: default
 ---
 <div>
     {{ content }}
-    {% if site.paginate %}
-    {% assign posts = paginator.posts %}
-    {% else %}
-    {% assign posts = site.posts %}
-    {% endif %}
-
+    {%- if site.paginate -%}
+    {%- assign posts = paginator.posts -%}
+    {%- else -%}
+    {%- assign posts = site.posts -%}
+    {%- endif -%}
     {%- if posts.size > 0 -%}
     <ul class="post-list">
         {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-        {%- for post in posts -%}
+        {% for post in posts %}
         <li>
             <span class="post-meta">{{ post.date | date: date_format }}</span>
-            {% for category in post.categories %}
-            <span class="post-meta">{{ category }}</span>
-            {% endfor %}
+            {% for tag in post.tags -%}
+            <span class="post-meta">{{ tag }}</span>
+            {% endfor -%}
             <h4>
                 <a class="post-link" href="{{ post.url | relative_url }}">
                     {{ post.title | escape }}
                 </a>
             </h4>
-            <span class="post-sumary">
-                {{ post.sumary }}
+            {%- if site.show_excerpts %}
+            <span class="post-excerpt">
+                {{ post.excerpt }}
             </span>
-            {%- if site.show_excerpts -%}
-            {{ post.excerpt }}
-            {%- endif -%}
+            {%- endif %}
         </li>
-        {%- endfor -%}
+        {% endfor -%}
     </ul>
-
+    <p class="rss-subscribe">se increva <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p></div>
     {% if site.paginate %}
     <div class="pager">
         <ul class="pagination">
-            {%- if paginator.previous_page %}
+            {% if paginator.previous_page %}
             <li><a href="{{ paginator.previous_page_path | relative_url }}" class="previous-page">Previous</a></li>
-            {%- endif %}
-            {%- if paginator.next_page %}
+            {% endif %}
+            {% if paginator.next_page %}
             <li><a href="{{ paginator.next_page_path | relative_url }}" class="next-page">Next</a></li>
-            {%- endif %}
+            {% endif %}
         </ul>
     </div>
-    {%- endif %}
-    {%- endif -%}
+    {% endif %}
+    {% endif %}
 </div>
